@@ -2,6 +2,7 @@
 
 ## 1.5 - Unreleased
 - Removed optional dependency to ripgrep. "grep --color=auto" is good enough.
+- "open url" to open current URL in a browser with xdg-open
 
 ## 1.4 - April 25th 2022
 - Making python-readability optional
